add particle in a box example

--- a/.gitignore
+++ b/.gitignore
@@ -824,3 +824,65 @@ output/1D/particle_in_a_box_1D_not_normalized/fig138.png
 output/1D/particle_in_a_box_1D_not_normalized/fig139.png
 output/1D/particle_in_a_box_1D_not_normalized/fig140.png
 output/1D/particle_in_a_box_1D_not_normalized/movie_particle_in_a_box_1D.avi
+output/1D/particle_in_a_delta_box_1D/fig000.png
+output/1D/particle_in_a_delta_box_1D/fig001.png
+output/1D/particle_in_a_delta_box_1D/fig002.png
+output/1D/particle_in_a_delta_box_1D/fig003.png
+output/1D/particle_in_a_delta_box_1D/fig004.png
+output/1D/particle_in_a_delta_box_1D/fig005.png
+output/1D/particle_in_a_delta_box_1D/fig006.png
+output/1D/particle_in_a_delta_box_1D/fig007.png
+output/1D/particle_in_a_delta_box_1D/fig008.png
+output/1D/particle_in_a_delta_box_1D/fig009.png
+output/1D/particle_in_a_delta_box_1D/fig010.png
+output/1D/particle_in_a_delta_box_1D/fig011.png
+output/1D/particle_in_a_delta_box_1D/fig012.png
+output/1D/particle_in_a_delta_box_1D/fig013.png
+output/1D/particle_in_a_delta_box_1D/fig014.png
+output/1D/particle_in_a_delta_box_1D/fig015.png
+output/1D/particle_in_a_delta_box_1D/fig016.png
+output/1D/particle_in_a_delta_box_1D/fig017.png
+output/1D/particle_in_a_delta_box_1D/fig018.png
+output/1D/particle_in_a_delta_box_1D/fig019.png
+output/1D/particle_in_a_delta_box_1D/fig020.png
+output/1D/particle_in_a_delta_box_1D/fig021.png
+output/1D/particle_in_a_delta_box_1D/fig022.png
+output/1D/particle_in_a_delta_box_1D/fig023.png
+output/1D/particle_in_a_delta_box_1D/fig024.png
+output/1D/particle_in_a_delta_box_1D/fig025.png
+output/1D/particle_in_a_delta_box_1D/fig026.png
+output/1D/particle_in_a_delta_box_1D/fig027.png
+output/1D/particle_in_a_delta_box_1D/fig028.png
+output/1D/particle_in_a_delta_box_1D/fig029.png
+output/1D/particle_in_a_delta_box_1D/fig030.png
+output/1D/particle_in_a_delta_box_1D/fig031.png
+output/1D/particle_in_a_delta_box_1D/fig032.png
+output/1D/particle_in_a_delta_box_1D/fig033.png
+output/1D/particle_in_a_delta_box_1D/fig034.png
+output/1D/particle_in_a_delta_box_1D/fig035.png
+output/1D/particle_in_a_delta_box_1D/fig036.png
+output/1D/particle_in_a_delta_box_1D/fig037.png
+output/1D/particle_in_a_delta_box_1D/fig038.png
+output/1D/particle_in_a_delta_box_1D/fig039.png
+output/1D/particle_in_a_delta_box_1D/fig040.png
+output/1D/particle_in_a_delta_box_1D/fig041.png
+output/1D/particle_in_a_delta_box_1D/fig042.png
+output/1D/particle_in_a_delta_box_1D/fig043.png
+output/1D/particle_in_a_delta_box_1D/fig044.png
+output/1D/particle_in_a_delta_box_1D/fig045.png
+output/1D/particle_in_a_delta_box_1D/fig046.png
+output/1D/particle_in_a_delta_box_1D/fig047.png
+output/1D/particle_in_a_delta_box_1D/fig048.png
+output/1D/particle_in_a_delta_box_1D/fig049.png
+output/1D/particle_in_a_delta_box_1D/fig050.png
+output/1D/particle_in_a_delta_box_1D/fig051.png
+output/1D/particle_in_a_delta_box_1D/fig052.png
+output/1D/particle_in_a_delta_box_1D/fig053.png
+output/1D/particle_in_a_delta_box_1D/fig054.png
+output/1D/particle_in_a_delta_box_1D/fig055.png
+output/1D/particle_in_a_delta_box_1D/fig056.png
+output/1D/particle_in_a_delta_box_1D/fig057.png
+output/1D/particle_in_a_delta_box_1D/fig058.png
+output/1D/particle_in_a_delta_box_1D/fig059.png
+output/1D/particle_in_a_delta_box_1D/fig060.png
+output/1D/particle_in_a_delta_box_1D/movie_article_in_a_box_1D.avi
